tdf#113818 convert formula of AnimContext.

Change-Id: I0f6f08247eaf8099d84c0e8201d22fc507b1cac4
Reviewed-on: https://gerrit.libreoffice.org/57414
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>