sd/qa/unit/export-tests.cxx
@@ -100,6 +100,7 @@ public:
     void testTextRotation();
     void testTdf115394PPT();
     void testBulletsAsImage();
+    void testTdf113818();
     void testTdf113822();
 
     CPPUNIT_TEST_SUITE(SdExportTest);
@@ -126,6 +127,7 @@ public:
     CPPUNIT_TEST(testTextRotation);
     CPPUNIT_TEST(testTdf115394PPT);
     CPPUNIT_TEST(testBulletsAsImage);
+    CPPUNIT_TEST(testTdf113818);
     CPPUNIT_TEST(testTdf113822);
 
     CPPUNIT_TEST_SUITE_END();
@@ -1091,6 +1093,19 @@ void SdExportTest::testTdf113822()
     xmlDocPtr pXmlDoc = parseExport(tempFile, "content.xml");
     assertXPath(pXmlDoc, "//anim:set[1]", "to", "solid");
 
+    xDocShRef->DoClose();
+}
+
+void SdExportTest::testTdf113818()
+{
+    utl::TempFile tempFile;
+    sd::DrawDocShellRef xDocShRef = loadURL(m_directories.getURLFromSrc("sd/qa/unit/data/pptx/tdf113818-swivel.pptx"), PPTX);
+
+    xDocShRef = saveAndReload(xDocShRef.get(), ODP, &tempFile);
+
+    xmlDocPtr pXmlDoc = parseExport(tempFile, "content.xml");
+    assertXPath(pXmlDoc, "//anim:animate[1]", "formula", "width*sin(2.5*pi*$)");
+    assertXPath(pXmlDoc, "//anim:animate[1]", "values", "0;1");
     xDocShRef->DoClose();
 }
 
